<resources>
    <string name="app_name">TPharma</string>
    <string name="vente">Vente</string>
    <string name="effectuerUneVente">Effectuer une vente</string>
    <string name="historiqueVente">Historique Vente</string>
    <string name="listeDesventes">Liste des ventes</string>
    <string name="commande">Commande</string>
    <string name="effectuerUnecommande">Effectuer une commande</string>
    <string name="facture">Facture</string>
    <string name="emettreUnefacture">Emettre une facture</string>
    <string name="inventaire">Inventaire</string>
    <string name="gestionDesProduits">Gestion des produits</string>
    <string name="rapport">Rapport</string>
    <string name="afficherLeRapport">Afficher le rapport</string>
    <string name="retourProuduit">Retour Prouduit</string>
    <string name="retourProduitAC">"Retour Produit A/C"</string>
    <string name="noteFrais">Note de Frais</string>
    <string name="listesDepensesachats">"Listes depenses/achats"</string>
    <string name="client">Client</string>
    <string name="gestionDesClients">Gestion des clients</string>
    <string name="fournisseurs">Fournisseurs</string>
    <string name="gestionDesFournisseur">Gestion des fournisseurs</string>
    <string name="lotterDelotter">"Lotter/Delotter"</string>
    <string name="EffectuerLoter">"Effectuer un ...."</string>
    <string name="reimpressionTicket">"Réimpression ticket"</string>
    <string name="reimprimerNouveauTicketVente">"Reimprimer un nouveau ticket de vente"</string>
    <string name="utilisateurs">Utilisateurs</string>
    <string name="gestionDesUtilisateurs">Gestion des utilisateurs</string>
    <string name="log">Log</string>
    <string name="voireLog">Voir les logs</string>
    <string name="notifications">Notifications</string>
    <string name="voirNotifications">Voir les notifications</string>
    <string name="rechercherUnProduit">Rechercher un produit</string>
    <string name="creerVentre">CREER VENTE</string>
    <string name="rechercherVente">Rechercher une vente</string>
    <string name="ajouterUneCommandeFounisseur">Ajouter une commande founisseur</string>
    <string name="historique">Historique</string>
    <string name="voirHhistoriqueDesCommandes">"Voir l'historique des commandes"</string>
    <string name="receptionner">Receptionner</string>
    <string name="receptionnerDesProduits">Receptionner des produits.</string>
    <string name="dateCommande">Date de la commande</string>
    <string name="validerCommande">Valider la commande</string>
    <string name="article">Article</string>
    <string name="historiqueCommande">HISTORIQUE Commande</string>
    <string name="creerCommande">CREER COMMANDE</string>
    <string name="rechercherCommande">Rechercher une commande</string>
    <string name="rechercherfacture">Rechercher une facture</string>
    <string name="faitesCalculFrais">Faites vos calcul de frais</string>
    <string name="factureClient">Facture Client</string>
    <string name="factureFournisseur">Facture Fournisseur</string>
    <string name="creerFactureClient">"Créer une facture client"</string>
    <string name="creerFactureFournisseur">"Créer une facture fournisseur"</string>
    <string name="creerNote">CREER NOTE</string>
    <string name="rechercherNote">Rechercher une note</string>
    <string name="nouvelleFacture">NOUVELLE FACTURE</string>
    <string name="referencement">"Réferencement"</string>
    <string name="codeProduit">"code du produit"</string>
    <string name="date">Date</string>
    <string name="valider">Valider</string>
    <string name="titre">Titre</string>
    <string name="sous_titre">Sous titre</string>
    <string name="retournezCommandeFournisseur">Retournez une commande fournisseur</string>
    <string name="rechercherClient">Rechercher client</string>
    <string name="rechercherMutuelle">Rechercher mutuelle.</string>
    <string name="rechercherFournisseur">Rechercher fournisseur</string>
    <string name="creer">"Créer"</string>
    <string name="deconnexion">"Deconnexion"</string>
    <string name="changerPassword">"Changer votre mot de passe"</string>
    <string name="nom">"Nom : "</string>
    <string name="prenom">"Prenom : "</string>
    <string name="grossiste">"Grossiste : "</string>

</resources>
