<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".commande.NouvelleCommandeActivity"
    android:background="@color/backgroundcolor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#e6e6e6"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:gravity="start"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fournisseurs"
                />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateCommande"
                />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"

                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_margin="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/article"
            android:drawableEnd="@drawable/ic_add_black_24dp"
            android:background="#035871"
            android:textColor="#fff"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_margin="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        >

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:background="#e6e6e6"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_margin="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/validerCommande"
            android:drawableEnd="@drawable/ic_add_black_24dp"
            android:background="#2c4d02"
            android:textColor="#fff"
            android:textStyle="bold"
            />
    </LinearLayout>

</LinearLayout>